--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -27,7 +27,7 @@
         <p data-testid="currentUTCTime" class="time"></p>
         <p data-testid="myTrack">Frontend</p>
         <div class="icons">
-            <a href="https://github.com/Anjolash" href="https://github.com/your-username/your-repo" data-testid="githubURL" target="_blank" class="profile__links">
+            <a href="https://github.com/Anjolash/HNGSTAGEONE" data-testid="githubURL" target="_blank" class="profile__links">
                 <i class="fab fa-github"></i>
             </a>
         </div> 
