--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -21,7 +21,7 @@
         <figure class="client--img--wrapper">
             <img src="slackdp.jpg" class="client--img" alt="Anjolaoluwa Lasekan" data-testid="slackDisplayImage">
         </figure>
-        <p data-testid="slackUserName">Anjolaoluwa Lasekan</p>
+        <strong data-testid="slackUserName">Anjolaoluwa Lasekan</strong>
         <p data-testid="currentDayOfTheWeek" class="date"></p>
         <p data-testid="currentUTCTime" class="time"></p>
         <p data-testid="myTrack">Frontend</p>
